hotfix: fix profile edit button size on ios mobile

--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,4 +1,6 @@
 .profile__edit {
+  padding: 0;
+  margin: 0;
   display: inline-flex;
   width: 24px;
   height: 24px;
